<resources>
    <string name="app_name">TaskyApp</string>
    <string name="txt_welcome_back">Welcome Back!</string>
    <string name="txt_email_address">Email Address</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">LOG IN</string>
    <string name="txt_account_register">Don’t HAVE AN ACCOUNT? SIGN UP</string>
    <string name="txt_name">Name</string>
    <string name="txt_get_started">GET STARTED</string>
    <string name="txt_today">TODAY</string>
    <string name="txt_select_month">Select a month:</string>
    <string name="txt_create_calendar_item">create calendar item</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_event">Event</string>
    <string name="txt_task">Task</string>
    <string name="txt_reminder">Reminder</string>
    <string name="txt_edit_task">Edit Task</string>
    <string name="txt_edit_reminder">Edit Reminder</string>
    <string name="txt_save">Save</string>
    <string name="txt_at">At</string>
    <string name="txt_10_minutes_before">10 minutes before</string>
    <string name="txt_30_minutes_before">30 minutes before</string>
    <string name="txt_1_hour_before">1 hour before</string>
    <string name="txt_6_hours_before">6 hours before</string>
    <string name="txt_1_day_before">1 day before</string>
    <string name="txt_open">Open</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_delete_task">DELETE TASK</string>
    <string name="txt_create_task">Create task</string>
</resources>