<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="?colorOnSurface"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="47dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/txt_welcome_back"
        android:textSize="28sp"
        android:textColor="?android:colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/bottom_dialog_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_default_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_edittext_gray_background"
            android:theme="@style/AppTheme"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:gravity="center_vertical"
                android:hint="@string/txt_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textSize="16sp"
                android:theme="@style/AppTheme" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_default_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_edittext_gray_background"
            android:theme="@style/AppTheme"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:gravity="center_vertical"
                android:hint="@string/txt_email_address"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="16sp"
                android:theme="@style/AppTheme" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_default_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_edittext_gray_background"
            android:theme="@style/AppTheme"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/md_theme_light_onSurfaceVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="16sp"
                android:theme="@style/AppTheme" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_default_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?colorOnSurface"
            android:fontFamily="@font/inter"
            android:text="@string/txt_get_started"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content">

            <ImageButton
                android:layout_gravity="center_vertical"
                android:id="@+id/bt_back"
                android:src="@drawable/baseline_arrow_back"
                android:background="@drawable/shape_button_back_background"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>