<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?colorOnSurface"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bt_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        app:tint="?android:colorBackground"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/txt_edit_task"
        android:textAlignment="center"
        android:textColor="?android:colorBackground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bt_save_task"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toEndOf="@+id/bt_close"
        app:layout_constraintTop_toTopOf="@+id/bt_close" />

    <TextView
        android:id="@+id/bt_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/txt_save"
        android:textColor="?android:colorBackground"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTint="?android:colorBackground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/bottom_dialog_shape"
        android:orientation="vertical"
        android:showDividers="middle|end"
        android:paddingHorizontal="16dp"
        android:divider="@drawable/layout_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_close">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toStartOf="@+id/card_options"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/txt_task"
            app:drawableStartCompat="@drawable/baseline_square_24" />


        <CheckBox
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:clickable="false"
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_extrabold"
            android:textSize="26sp"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
            app:layout_constraintEnd_toStartOf="@+id/card_options"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Meeting" />
        <TextView
            android:minLines="2"
            android:id="@+id/card_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            tools:text="Weekly plan \nRole distribution"
            app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />

        <include
            android:id="@+id/full_date_section"
            layout="@layout/section_hour_date"
            android:layout_marginVertical="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bt_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:drawablePadding="13dp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/appointment"
            app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24_black" />

    </LinearLayout>
    <TextView
        android:id="@+id/bt_delete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="67dp"
        android:textAlignment="center"
        android:text="@string/txt_delete_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>